@@ -1,7 +1,6 @@
 /* pthread.h: POSIX pthread interface
 
-   Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006,
-   2007, 2011, 2012, 2013 Red Hat, Inc.
+   Copyright 1996, 1997, 1998, 1999, 2000, 2001, 2002, 2003 Red Hat, Inc.
 
    Written by Marco Fuykschot <marco@ddi.nl>
 
@@ -14,7 +13,6 @@
 #include <sys/types.h>
 #include <signal.h>
 #include <sched.h>
-#include <time.h>
 
 #ifndef _PTHREAD_H
 #define _PTHREAD_H
@@ -27,6 +25,17 @@ extern "C"
 
 /* Defines. (These are correctly defined here as per
    http://www.opengroup.org/onlinepubs/7908799/xsh/pthread.h.html */
+
+/* FIXME: this should allocate a new cond variable, and return the value  that
+ would normally be written to the passed parameter of pthread_cond_init(lvalue, NULL); */
+/* #define PTHREAD_COND_INITIALIZER 0 */
+
+#define PTHREAD_DESTRUCTOR_ITERATIONS 1
+/* Tls has 64 items for pre win2000 - and we don't want to use them all :]
+ * Before committing discuss this with the list
+ */
+#define PTHREAD_KEYS_MAX 32
+/* the default : joinable */
 
 #define PTHREAD_CANCEL_ASYNCHRONOUS 1
 /* defaults are enable, deferred */
@@ -67,16 +76,12 @@ extern "C"
 /* Attributes */
 int pthread_attr_destroy (pthread_attr_t *);
 int pthread_attr_getdetachstate (const pthread_attr_t *, int *);
-int pthread_attr_getguardsize (const pthread_attr_t *, size_t *);
 int pthread_attr_getinheritsched (const pthread_attr_t *, int *);
 int pthread_attr_getschedparam (const pthread_attr_t *, struct sched_param *);
 int pthread_attr_getschedpolicy (const pthread_attr_t *, int *);
 int pthread_attr_getscope (const pthread_attr_t *, int *);
-int pthread_attr_getstack (const pthread_attr_t *, void **, size_t *);
-int pthread_attr_getstackaddr (const pthread_attr_t *, void **);
 int pthread_attr_init (pthread_attr_t *);
 int pthread_attr_setdetachstate (pthread_attr_t *, int);
-int pthread_attr_setguardsize (pthread_attr_t *, size_t);
 int pthread_attr_setinheritsched (pthread_attr_t *, int);
 int pthread_attr_setschedparam (pthread_attr_t *, const struct sched_param *);
 int pthread_attr_setschedpolicy (pthread_attr_t *, int);
@@ -87,7 +92,7 @@ int pthread_attr_setscope (pthread_attr_t *, int);
  * Not supported or implemented. The prototypes are here so if someone greps the
  * source they will see these comments
  */
-int pthread_attr_setstack (pthread_attr_t *, void *, size_t);
+int pthread_attr_getstackaddr (const pthread_attr_t *, void **);
 int pthread_attr_setstackaddr (pthread_attr_t *, void *);
 #endif
 
@@ -127,18 +132,15 @@ int pthread_cond_timedwait (pthread_cond_t *,
 			    pthread_mutex_t *, const struct timespec *);
 int pthread_cond_wait (pthread_cond_t *, pthread_mutex_t *);
 int pthread_condattr_destroy (pthread_condattr_t *);
-int pthread_condattr_getclock (const pthread_condattr_t *, clockid_t *);
 int pthread_condattr_getpshared (const pthread_condattr_t *, int *);
 int pthread_condattr_init (pthread_condattr_t *);
-int pthread_condattr_setclock (pthread_condattr_t *, clockid_t);
 int pthread_condattr_setpshared (pthread_condattr_t *, int);
 
 int pthread_create (pthread_t *, const pthread_attr_t *,
 		    void *(*)(void *), void *);
 int pthread_detach (pthread_t);
 int pthread_equal (pthread_t, pthread_t);
-void pthread_exit (void *) __attribute__ ((noreturn));
-int pthread_getcpuclockid (pthread_t, clockid_t *);
+void pthread_exit (void *);
 int pthread_getschedparam (pthread_t, int *, struct sched_param *);
 void *pthread_getspecific (pthread_key_t);
 int pthread_join (pthread_t, void **);
@@ -163,13 +165,6 @@ int pthread_mutexattr_setprioceiling (pthread_mutexattr_t *, int);
 int pthread_mutexattr_setprotocol (pthread_mutexattr_t *, int);
 int pthread_mutexattr_setpshared (pthread_mutexattr_t *, int);
 int pthread_mutexattr_settype (pthread_mutexattr_t *, int);
-
-/* Spinlocks */
-int pthread_spin_destroy (pthread_spinlock_t *);
-int pthread_spin_init (pthread_spinlock_t *, int);
-int pthread_spin_lock (pthread_spinlock_t *);
-int pthread_spin_trylock (pthread_spinlock_t *);
-int pthread_spin_unlock (pthread_spinlock_t *);
 
 /* RW Locks */
 int pthread_rwlock_destroy (pthread_rwlock_t *rwlock);
@@ -196,17 +191,13 @@ pthread_t pthread_self (void);
 int pthread_setcancelstate (int, int *);
 int pthread_setcanceltype (int, int *);
 int pthread_setschedparam (pthread_t, int, const struct sched_param *);
-int pthread_setschedprio (pthread_t, int);
 int pthread_setspecific (pthread_key_t, const void *);
 void pthread_testcancel (void);
 
 /* Non posix calls */
 
-int pthread_getattr_np (pthread_t, pthread_attr_t *);
-int pthread_sigqueue (pthread_t *, int, const union sigval);
 int pthread_suspend (pthread_t);
 int pthread_continue (pthread_t);
-int pthread_yield (void);
 
 #ifdef __cplusplus
 }
